--- a/admin/admin-issue_description.html
+++ b/admin/admin-issue_description.html
@@ -5,10 +5,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin - Issue Description</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="shortcut icon" type="image/png" href="../favicon.ico">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="../static/js/supabaseClient.js"></script>
+  <script src="../static/js/auth.js"></script>
+  <script src="../static/js/admin-modelnumber.js"></script>	
+  <link rel='stylesheet' href="../static/css/styles.css" type='text/css' media='all' />
+  <link rel="stylesheet" href="../static/css/responsive_header.css" />
 </head>
 <body class="bg-light">
+	<header class="app-header">
+	  <div class="container">
+		<a href="index.html"><img src="../static/images/Pool-Pro-Logo.png" height="70px"></a><h1 class="app-title">Warranty Manager</h1>
+		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
+		<nav class="app-nav">
+		  <a href="index.html">Dashboard</a>
+		  <a href="list.html">All Entries</a>
+		  <button id="logout-btn" class="btn btn-outline-light btn-sm">Logout</button>
+		</nav>
+	  </div>
+	</header>  
   <div class="container mt-5">
     <h2>Manage Issue Description</h2>
 
@@ -34,60 +52,5 @@
     </table>
   </div>
 
-  <script>
-    const supabase = supabase.createClient('https://your-project.supabase.co', 'public-anon-key');
-
-    async function loadData() {
-      const { data, error } = await supabase
-        .from('issue_description')
-        .select('*')
-        .order('id', { ascending: true });
-
-      const tbody = document.getElementById('table-body');
-      tbody.innerHTML = '';
-
-      data.forEach(item => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${item.id}</td>
-          <td contenteditable="true" onblur="updateName(${item.id}, this.innerText)">${item.name}</td>
-          <td>${item.active ? 'Yes' : 'No'}</td>
-          <td>
-            <button class="btn btn-sm btn-danger" onclick="toggleActive(${item.id}, ${item.active})">
-              ${item.active ? 'Deactivate' : 'Activate'}
-            </button>
-          </td>
-        `;
-        tbody.appendChild(row);
-      });
-    }
-
-    async function updateName(id, newName) {
-      await supabase
-        .from('issue_description')
-        .update({ name: newName })
-        .eq('id', id);
-      loadData();
-    }
-
-    async function toggleActive(id, currentStatus) {
-      await supabase
-        .from('issue_description')
-        .update({ active: !currentStatus })
-        .eq('id', id);
-      loadData();
-    }
-
-    document.getElementById('add-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById('new-entry').value.trim();
-      if (!name) return;
-      await supabase.from('issue_description').insert([{ name }]);
-      document.getElementById('new-entry').value = '';
-      loadData();
-    });
-
-    loadData();
-  </script>
 </body>
 </html>
