--- a/admin/admin-modelnumber.html
+++ b/admin/admin-modelnumber.html
@@ -18,7 +18,7 @@
 <body class="bg-light">
 	<header class="app-header">
 	  <div class="container">
-		<a href="index.html"><img src="static/images/Pool-Pro-Logo.png" height="70px"></a><h1 class="app-title">Warranty Manager</h1>
+		<a href="index.html"><img src="../static/images/Pool-Pro-Logo.png" height="70px"></a><h1 class="app-title">Warranty Manager</h1>
 		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
 		<nav class="app-nav">
 		  <a href="index.html">Dashboard</a>
@@ -51,60 +51,5 @@
     </table>
   </div>
 
-  <!--<script>
-    const supabase = supabase.createClient('https://your-project.supabase.co', 'public-anon-key');
-
-    async function loadData() {
-      const { data, error } = await supabase
-        .from('modelnumber')
-        .select('*')
-        .order('id', { ascending: true });
-
-      const tbody = document.getElementById('table-body');
-      tbody.innerHTML = '';
-
-      data.forEach(item => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${item.id}</td>
-          <td contenteditable="true" onblur="updateName(${item.id}, this.innerText)">${item.name}</td>
-          <td>${item.active ? 'Yes' : 'No'}</td>
-          <td>
-            <button class="btn btn-sm btn-danger" onclick="toggleActive(${item.id}, ${item.active})">
-              ${item.active ? 'Deactivate' : 'Activate'}
-            </button>
-          </td>
-        `;
-        tbody.appendChild(row);
-      });
-    }
-
-    async function updateName(id, newName) {
-      await supabase
-        .from('modelnumber')
-        .update({ name: newName })
-        .eq('id', id);
-      loadData();
-    }
-
-    async function toggleActive(id, currentStatus) {
-      await supabase
-        .from('modelnumber')
-        .update({ active: !currentStatus })
-        .eq('id', id);
-      loadData();
-    }
-
-    document.getElementById('add-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById('new-entry').value.trim();
-      if (!name) return;
-      await supabase.from('modelnumber').insert([{ name }]);
-      document.getElementById('new-entry').value = '';
-      loadData();
-    });
-
-    loadData();
-  </script> -->
 </body>
 </html>
